
syntax = "proto3";
package com.xunleijr.game.vo ;

message BlockGuessResult{
    string type = 1 ;
    string code = 2 ;
    string msg = 3 ;

    message Result {
        int32 mode = 1;
        int64 roundId = 2;
        int32 upSwitch = 3;
        int32 downSwitch = 4;
     }

    Result result = 4;

}
