syntax = "proto3";
package com.xunleijr.game.vo ;
  
message GuessQuoteResult{
    string type = 1 ;
    string code = 2 ;
    string msg = 3 ;
    
    message Result {
        int64 roundId = 1;
        string roundIdDate = 2;
        double newQuote = 3;
        int64 newQuoteTs = 4;
        int64 PreQuoteTs = 5;
        int32 mode = 6;
     }
  
    Result result = 4;
  
}