
syntax = "proto3";
package com.xunleijr.game.vo.updown;

message QueryPlayTypeSwitchResult {
    string code = 1;
    string msg = 2;
    string data = 3;
}
