syntax = "proto3";
package com.xunlei.weipan.vo ;

message RegisterResult{
    string type = 1;
    string code = 2 ;
    string msg = 3 ;
}
