syntax = "proto3";
package com.xunleijr.game.vo;

message UpdownGoldListResult {
    string code = 1;
    string msg = 2;
    repeated int32 amount = 3;
}
